# Plonky3

./: Cargo.toml
baby-bear/: Cargo.toml
baby-bear/benches/: operations.rs
baby-bear/src/: lib.rs
blake3/: Cargo.toml
blake3/src/: blake3.rs  lib.rs
brakedown/: Cargo.toml
brakedown/benches/: encode.rs  encode_baby_bear.rs  encode_goldilocks.rs
field/src/: field.rs  lib.rs
goldilocks/: Cargo.toml
goldilocks/benches/: operations.rs
goldilocks/src/: inversion.rs  lib.rs
lde/: Cargo.toml
lde/benches/: fft.rs
lde/src/: fft.rs  lib.rs  packable.rs  packed.rs
lde/src/polynomial/: division.rs  mod.rs
mersenne-31/: Cargo.toml
mersenne-31/benches/: operation_complex.rs  operation_mersenne.rs
mersenne-31/src/: complex.rs  lib.rs
util/src/: lib.rs
