[workspace]
members = [
    "air",
    "blake3",
    "brakedown",
    "challenger",
    "code",
    "commit",
    "field",
    "fri",
    "goldilocks",
    "keccak",
    "lde",
    "ldt",
    "matrix",
    "merkle-tree",
    "maybe-rayon",
    "mersenne-31",
    "multi-stark",
    "poseidon",
    "symmetric",
    "tensor-pcs",
    "util",
    "uni-stark",
]
