[package]
name = "p3-lde"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-field = { path = "../field" }
p3-matrix = { path = "../matrix" }
p3-util = { path = "../util" }
p3-baby-bear = { path = "../baby-bear" }
p3-goldilocks = { path = "../goldilocks" }
p3-mersenne-31 = { path = "../mersenne-31" }
unroll = { version = "0.1.5", default-features = false }
anyhow = { version = "1.0.40", default-features = false }
itertools = { version = "0.11.0", default-features = false, features = ["use_alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
num = { version = "0.4", default-features = false, features = ["alloc", "rand"] }
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "fft"
harness = false